--- a/project.html
+++ b/project.html
@@ -178,7 +178,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-19.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -199,7 +199,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-16.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -220,7 +220,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-20.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -241,7 +241,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-21.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -263,7 +263,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-22.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -284,7 +284,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-23.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -306,7 +306,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-26.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -327,7 +327,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-27.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -349,7 +349,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-24.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -370,7 +370,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-25.jpg"
               alt=""
               style="max-height: 500px; max-height: 550px;"
@@ -393,7 +393,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-28.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -414,7 +414,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-29.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -435,7 +435,7 @@
         <div class="col-xl-4 portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-30.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -456,7 +456,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-1.jpg"
               alt=""
             />
@@ -476,7 +476,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-2.jpg"
               alt=""
             />
@@ -497,7 +497,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-4.jpg"
               alt=""
             />
@@ -517,7 +517,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-3.jpg"
               alt=""
             />
@@ -541,7 +541,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-31.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -562,7 +562,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-32.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -583,7 +583,7 @@
         <div class="col-xl-4 portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-34.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -605,7 +605,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-35.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -626,7 +626,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-36.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -647,7 +647,7 @@
         <div class="col-xl-4 portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-37.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -670,7 +670,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-6.jpg"
               alt=""
               style="max-height: 620px;"
@@ -691,7 +691,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-7.jpg"
               alt=""
               
@@ -715,7 +715,7 @@
         <div class="col-xl-4 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-56.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -736,7 +736,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-54.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -757,7 +757,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-55.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -780,7 +780,7 @@
         <div class="col-xl-4  col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-5.jpg"
               alt=""
             />
@@ -800,7 +800,7 @@
         <div class="col-xl-4 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-12.jpg"
               alt=""
             />
@@ -821,7 +821,7 @@
         <div class="col-xl-4 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-13.jpg"
               alt=""
             />
@@ -841,7 +841,7 @@
         <div class="col-lg-6 col-md-6   portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-50.jpg"
               alt=""
               style="max-height: 440px;"
@@ -862,7 +862,7 @@
         <div class="col-lg-6 col-md-6  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-49.jpg"
               alt=""
               style="max-height: 440px"
@@ -883,7 +883,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-38.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -900,7 +900,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-39.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -917,7 +917,7 @@
         <div class="col-xl-4 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-40.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -937,7 +937,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-41.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -954,7 +954,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-42.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -971,7 +971,7 @@
         <div class="col-xl-4 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-43.jpg"
               alt=""
               style="max-height: 680px;;"
@@ -988,7 +988,7 @@
         <div class="col-lg-6 col-md-6   portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-46.jpg"
               alt=""
             />
@@ -1008,7 +1008,7 @@
         <div class="col-lg-6 col-md-6  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-44.jpg"
               alt=""
               style="max-height: 440px"
@@ -1030,7 +1030,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-15.jpg"
               alt=""
             />
@@ -1050,7 +1050,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-10.jpg"
               alt=""
               style="max-height: 440px"
@@ -1071,7 +1071,7 @@
         <div class="col-xl-4  portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-8.jpg"
               alt=""
             />
@@ -1095,7 +1095,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-51.jpg"
               alt=""
             />
@@ -1115,7 +1115,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-52.jpg"
               alt=""
             />
@@ -1135,7 +1135,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-53.jpg"
               alt=""
             />
@@ -1156,7 +1156,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-57.jpg"
               alt=""
               style="max-height: 600px"
@@ -1177,7 +1177,7 @@
         <div class="col-lg-6 col-md-6 portfolio-item first">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-14.jpg"
               alt=""
               style="max-height: 600px"
@@ -1199,7 +1199,7 @@
         <div class="col-xl-4  portfolio-item second">
           <div class="position-relative portfolio-box">
             <img
-              class="img-fluid w-100"
+              class="img-fluid portfolio-img w-100"
               src="img/project/project-45.jpg"
               alt=""
               style="max-height: 800px;"
