--- a/about.html
+++ b/about.html
@@ -123,14 +123,14 @@
           <h1 class="display-5 text-uppercase mb-4">
             Why <span class="text-primary">Y.S. Builders?</span>
           </h1>
-          <h2 class="text-uppercase mb-3 text-center">
+          <h2 class="text-uppercase mb-3">
             Since
             <span class="text-primary">
               2066 B.S.</span
             >
           </h2>
 
-          <h2 class="text-uppercase mb-3 text-center">
+          <h2 class="text-uppercase mb-4">
             Select our construction firm for our unmatched
             <span class="text-primary">
               dedication to excellence, punctual project completion, and
