--- a/service.html
+++ b/service.html
@@ -90,13 +90,14 @@
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link active">Service</a>
                     <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
-                    <div class="nav-item dropdown">
+                    <a href="blog.html" class="nav-item nav-link">Blogs</a>
+                    <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blogs</a>
                         <div class="dropdown-menu m-0">
                             <a href="blog.html" class="dropdown-item">Blog</a>
                             <a href="detail.html" class="dropdown-item">Blog Detail</a>
                         </div>
-                    </div>
+                    </div> -->
                     <a href="contact.html" class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block">Contact Us <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
