--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
               <h4 class="text-uppercase mb-3">
                 <span class="text-primary"> Leading construction Company</span> in Kathmandu
               </h4>
-              <a class="text-uppercase fw-bold" href=""
+              <a class="text-uppercase fw-bold" href="detail.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
             </div>
@@ -760,7 +760,7 @@
               <h4 class="text-uppercase mb-3">
                <span class="text-primary"> Cost of Building a House in Nepal:</span> Budgeting Guidelines
               </h4>
-              <a class="text-uppercase fw-bold" href=""
+              <a class="text-uppercase fw-bold" href="detail.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
             </div>
@@ -791,7 +791,7 @@
               <h4 class="text-uppercase mb-3">
                 <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
               </h4>
-              <a class="text-uppercase fw-bold" href=""
+              <a class="text-uppercase fw-bold" href="detail.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
             </div>
