--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
-                <a href="blog.html" class="nav-item nav-link">Blogs</a>
+                <a href="blog.html" class="nav-item nav-link active">Blogs</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Blogs</a>
                     <div class="dropdown-menu m-0">
@@ -108,11 +108,11 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
-        <h1 class="display-3 text-uppercase text-white mb-3">Blog Grid</h1>
+        <h1 class="display-3 text-uppercase text-white mb-3">Blogs</h1>
         <div class="d-inline-flex text-white">
             <h6 class="text-uppercase m-0"><a href="">Home</a></h6>
             <h6 class="text-white m-0 px-3">/</h6>
-            <h6 class="text-uppercase text-white m-0">Blog Grid</h6>
+            <h6 class="text-uppercase text-white m-0">Blogs</h6>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -149,7 +149,7 @@
                 <h4 class="text-uppercase mb-3">
                   <span class="text-primary"> Leading construction Company</span> in Kathmandu
                 </h4>
-                <a class="text-uppercase fw-bold" href=""
+                <a class="text-uppercase fw-bold" href="blog-1.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -231,7 +231,7 @@
                                 <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
+                        <h4 class="text-uppercase mb-3">The Essence of <span class="text-primary"> Nepali Architecture</span></h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                                 <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
+                        <h4 class="text-uppercase mb-3">The Resilience of <span class="text-primary"> Bhaktapur’s Architecture</span></h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                                 <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
+                        <h4 class="text-uppercase mb-3">Traditional Newari Houses: <span class="text-primary"> A Model of Sustainability</span></h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -285,7 +285,7 @@
                                 <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
+                        <h4 class="text-uppercase mb-3">The Unique Charm of <span class="text-primary"> Wooden Carvings</span></h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                                 <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
+                        <h4 class="text-uppercase mb-3">Pagoda-Style Temples: <span class="text-primary"> A Glimpse into Spirituality</span></h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                                 <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
+                        <h4 class="text-uppercase mb-3">Symbolism and Spiritual <span class="text-primary"> Significance of pagoda</span></h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
