--- a/blog-1.html
+++ b/blog-1.html
@@ -148,17 +148,21 @@
           <!-- Blog Detail Start -->
           <div class="mb-5">
             <h1 class="text-uppercase mb-3">
-              Why Y.S. Builders are <span class="text-primary">Leading Construction Company in
-              Nepal ?</span>
+              Why Y.S. Builders are
+              <span class="text-primary"
+                >Leading Construction Company in Nepal ?</span
+              >
             </h1>
             <p>
               Y.S. Builders has established itself as a leading entity in the
-              dynamic construction industry of Nepal, much recognised for
-              its exceptional quality and groundbreaking ideas. For the
-              following reasons, Y.S. Builders distinguishes itself as a
-              prominent building firm in Kathmandu:
+              dynamic construction industry of Nepal, much recognised for its
+              exceptional quality and groundbreaking ideas. For the following
+              reasons, Y.S. Builders distinguishes itself as a prominent
+              building firm in Kathmandu:
             </p>
-            <h4 class="text-uppercase mb-3 text-primary">1. Verified History of Success</h4>
+            <h4 class="text-uppercase mb-3 text-primary">
+              1. Verified History of Success
+            </h4>
             <p>
               Y.S. Builders has been established from 2066 B.S. till now, a
               strong reputation throughout time by completing a diverse range of
@@ -168,7 +172,9 @@
               the allotted timeframe has garnered them confidence and acclaim
               within the industry.
             </p>
-            <h4 class="text-uppercase mb-3 text-primary">2. Commitment of Quality</h4>
+            <h4 class="text-uppercase mb-3 text-primary">
+              2. Commitment of Quality
+            </h4>
             <p>
               A fundamental factor contributing to Y.S. Builders' success in the
               construction industry is their constant commitment to excellence.
@@ -176,7 +182,9 @@
               rigorous quality control procedures, which guarantee that each
               project not only meets but also surpasses industry standards.
             </p>
-            <h4 class="text-uppercase mb-3 text-primary">3. Highly trained labour force</h4>
+            <h4 class="text-uppercase mb-3 text-primary">
+              3. Highly trained labour force
+            </h4>
             <p>
               Y.S. Builders has a workforce include of proficient experts such
               as architects, engineers, project managers, and construction
@@ -184,40 +192,92 @@
               greatly enhance the company's achievements and capacity to
               efficiently execute intricate tasks.
             </p>
-            <h4 class="text-uppercase mb-3 text-primary">4. Innovative Solutionss</h4>
+            <h4 class="text-uppercase mb-3 text-primary">
+              4. Innovative Solutionss
+            </h4>
             <p>
               Innovation is the fundamental principle of Y.S. Builders'
               strategy. The organisation integrates contemporary building
               methods and sustainable approaches to optimise the effectiveness
               and ecological footprint of its projects.
             </p>
+            <h4 class="text-uppercase mb-3 text-primary">
+              5. Customer-Centric Approach
+            </h4>
+            <p>
+              Customer satisfaction is a primary focus for Y.S. Builders. They
+              collaborate closely with clients to accurately comprehend their
+              needs and preferences, thereby guaranteeing that every project is
+              customised to fulfil particular criteria.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">
+              6. Alignment to Deadlines
+            </h4>
+            <p>
+              The construction industry places great importance on timeliness,
+              and Y.S. Builders consistently achieves outstanding results by
+              completing projects within the agreed-upon timeframes. Their very
+              effective project management techniques and well-organised
+              procedures significantly enhance their capacity to consistently
+              fulfil deadlines.
+            </p>
+
             <img
               class="img-fluid w-100 rounded mb-5"
               src="img/blog/blog-1.webp"
               alt=""
             />
-
+            <h4 class="text-uppercase mb-3 text-primary">
+              7. Strong Industry Relationships
+            </h4>
             <p>
-              Voluptua est takimata stet invidunt sed rebum nonumy stet, clita
-              aliquyam dolores vero stet consetetur elitr takimata rebum
-              sanctus. Sit sed accusam stet sit nonumy kasd diam dolores,
-              sanctus lorem kasd duo dolor dolor vero sit et. Labore ipsum duo
-              sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et,
-              clita lorem sit vero amet amet est dolor elitr, stet et no diam
-              sit. Dolor erat justo dolore sit invidunt.
+              At Y.S. Builders, robust partnerships have been forged with
+              suppliers, subcontractors, and regulatory authorities. These ties
+              enhance the efficiency of project implementation and provide
+              access to assets and services of superior quality.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">
+              8. Prioritise Safety
+            </h4>
+            <p>
+              Safety is of the highest priority to Y.S. Builders. They establish
+              and enforce thorough safety procedures and regularly organise
+              training sessions to provide a secure working environment for
+              their staff and subcontractors.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">
+              9. Reputation and Recognition
+            </h4>
+            <p>
+              Y.S. Builders has received substantial recognition and acclaim in
+              the industry for their valuable contributions and distinguished
+              accomplishments. Positive client feedback and industry accolades
+              provide as clear evidence of their renowned reputation for
+              quality.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">
+              10. Community Engagement
+            </h4>
+            <p>
+              Y.S. Builders is renowned for its active participation in
+              community development and implementation of corporate social
+              responsibility (CSR) programs. Their active participation in local
+              initiatives and contributions to the betterment of society
+              significantly bolster their reputation as a conscientious and
+              principled corporation.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">Conclusion</h4>
+            <p>
+              Y.S. Builders' status as a top construction firm in Nepal can
+              be ascribed to their dedication to excellence, ingenuity, highly
+              trained personnel, and customer-focused strategy. Their capacity
+              to meet project deadlines, uphold rigorous safety protocols, and
+              actively involve the community reinforces their reputation as a
+              reliable entity in the construction sector. Through their ongoing
+              pursuit of quality, Y.S. Builders maintains a leading position in
+              influencing the skyline and infrastructure of Nepal.
             </p>
 
-            <p>
-              Diam dolor est labore duo invidunt ipsum clita et, sed et lorem
-              voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit
-              kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos.
-              Clita no magna no dolor erat diam tempor rebum consetetur, sanctus
-              labore sed nonumy diam lorem amet eirmod. No at tempor sea diam
-              kasd, takimata ea nonumy elitr sadipscing gubergren erat.
-              Gubergren at lorem invidunt sadipscing rebum sit amet ut ut,
-              voluptua diam dolores at sadipscing stet. Clita dolor amet dolor
-              ipsum vero ea ea eos.
-            </p>
           </div>
           <!-- Blog Detail End -->
         </div>
