--- a/blog.html
+++ b/blog.html
@@ -147,7 +147,7 @@
                   </div>
                 </div>
                 <h4 class="text-uppercase mb-3">
-                  <span class="text-primary"> Leading construction Company</span> in Kathmandu
+                  <span class="text-primary"> Leading construction Company</span> in Nepal
                 </h4>
                 <a class="text-uppercase fw-bold" href="blog-1.html"
                   >Read More <i class="bi bi-arrow-right"></i
