--- a/blog.html
+++ b/blog.html
@@ -181,7 +181,7 @@
                 <h4 class="text-uppercase mb-3">
                  <span class="text-primary"> Cost of Building a House in Nepal:</span> Budgeting Guidelines
                 </h4>
-                <a class="text-uppercase fw-bold" href=""
+                <a class="text-uppercase fw-bold" href="blog-2.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -212,7 +212,7 @@
                 <h4 class="text-uppercase mb-3">
                   <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
                 </h4>
-                <a class="text-uppercase fw-bold" href=""
+                <a class="text-uppercase fw-bold" href="blog-3.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
