--- a/blog-1.html
+++ b/blog-1.html
@@ -142,7 +142,7 @@
     <!-- Page Header Start -->
 
     <!-- Blog Start -->
-    <div class="container-fluid py-6 px-5">
+    <div class="container-fluid bg-yellow py-6 px-5">
       <div class="row g-5">
         <div class="col-lg-8">
           <!-- Blog Detail Start -->
@@ -287,7 +287,7 @@
           <!-- Category Start -->
           <div class="mb-5">
             <h3 class="text-uppercase mb-4 text-primary">Offers</h3>
-            <div class="d-flex flex-column justify-content-start bg-light p-4">
+            <div class="d-flex flex-column justify-content-start bg-dark p-4">
               <a class="h6 text-uppercase mb-4" href="contact.html"
                 ><i class="fa fa-angle-right me-2"></i>New Year Offer</a
               >
