--- a/blog.html
+++ b/blog.html
@@ -232,7 +232,7 @@
                             </div>
                         </div>
                         <h4 class="text-uppercase mb-3">The Essence of <span class="text-primary"> Nepali Architecture</span></h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold" href="blog-4.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
