--- a/blog-4.html
+++ b/blog-4.html
@@ -148,198 +148,158 @@
           <!-- Blog Detail Start -->
           <div class="mb-5">
             <h1 class="text-uppercase mb-3">
-              Build Wise, Build Strong:
-              <span class="text-primary"
-                >Why Choose Pillar Construction in Nepal?</span
-              >
+              The Essence of 
+              <span class="text-primary">Nepali Architecture</span>
             </h1>
             <p>
-              When it comes to constructing a durable and reliable building,
-              choosing the right construction company is crucial. In Nepal,
-              where architectural beauty meets challenging environmental
-              conditions, Pillar Construction has emerged as a top choice for
-              those seeking quality, reliability, and excellence. Here’s why
-              Pillar Construction stands out as a preferred construction partner
-              in Nepal.
+              In order to ensure that the project is in line with your financial
+              capabilities and expectations, it is necessary to carefully plan
+              and budget for the construction of a house in Nepal. The cost of
+              building can vary greatly based on a number of factors, such as
+              the location, the design, the materials, and the labour. In order
+              to assist you in developing an efficient budget for the
+              construction of a house in Nepal, here is a thorough guide.
             </p>
             <h4 class="text-uppercase mb-3 text-primary">
-              1. Expertise and Experience
+              1. Recognising the Most Important Cost Factors
             </h4>
             <p>
-              Over the course of several decades, Pillar Construction has
-              established a strong reputation in the construction sector for
-              consistently delivering projects of exceptional quality. Their
-              comprehensive portfolio of residential, commercial, and
-              infrastructural projects demonstrates their proficiency in
-              managing a wide range of construction requirements.
+              It is vital to have a solid understanding of the fundamental
+              aspects that determine construction costs before delving into the
+              minutiae of budgeting. These components are as follows:
             </p>
-            <p>
-              The firm has a staff of highly proficient specialists, comprising
-              architects, engineers, project managers, and construction workers,
-              all of whom possess expertise in their specific domains. This
-              level of knowledge guarantees that each job is carried out with
-              accuracy and exceptional quality.
-            </p>
+            <ul>
+              <p><i class="fa fa-check text-primary me-3"></i>Location</p>
+              <p>
+                There is a potential for considerable price disparities between
+                urban and rural areas. For example, the cost of construction in
+                Kathmandu and other major cities is typically more than the cost
+                of construction in rural areas because of the higher cost of
+                labour and additional materials.
+              </p>
+              <p>
+                <i class="fa fa-check text-primary me-3"></i>Design and Size
+              </p>
+              <p>
+                The degree of difficulty of the design and the dimensions of the
+                house will both have an effect on the total cost. Generally
+                speaking, the cost of custom and elaborate designs is more.
+              </p>
+              <p><i class="fa fa-check text-primary me-3"></i>Materials</p>
+              <p>
+                The cost is impacted by the construction materials that are
+                selected, such as bricks, concrete, or wood. Materials that are
+                imported or of a high quality will result in increased costs.
+              </p>
+              <p><i class="fa fa-check text-primary me-3"></i>Labor</p>
+              <p>
+                Costs of skilled labour fluctuate, with seasoned workers
+                demanding greater salaries. Labour expenses are also influenced
+                by the geographical location of the project.
+              </p>
+              <p>
+                <i class="fa fa-check text-primary me-3"></i>Regulations and
+                Perits
+              </p>
+              <p>
+                Adhering to relevant local building regulations and acquiring
+                required permits can increase the overall expenses.
+              </p>
+            </ul>
             <h4 class="text-uppercase mb-3 text-primary">
-              2. Commitment to Quality
+              2. Estimating Costs Per Square Foot
             </h4>
             <p>
-              Pilpillar Construction places a great emphasis on using materials
-              of superior quality in order to guarantee the long-lasting and
-              resilient nature of their projects. Through the procurement of
-              products from respected sources, they uphold stringent quality
-              control criteria.
-            </p>
-            <p>
-              The company integrates cutting-edge building technology and
-              procedures, guaranteeing that its projects not only align with but
-              beyond industry benchmarks. This dedication to invention
-              facilitates the manufacture of buildings that are both utilitarian
-              and visually appealing.
-            </p>
-            <h4 class="text-uppercase mb-3 text-primary">
-              3. Customization and Design Excellence
-            </h4>
-            <p>
-              Pillar Construction recognises that each client has distinct
-              requirements and preferences, and so offers customised solutions.
-              They provide tailored design solutions that correspond to clients'
-              visual concepts while complying with functional and structural
-              criteria.
+              Quantifying the cost per square foot is a widely used method for
+              estimating building expenses. The typical cost of construction in
+              Nepal might vary between NPR 2,500 and NPR 5,000 per square foot,
+              contingent upon the aforementioned criteria.
             </p>
 
             <p>
-              Architectural Excellence: Their team of architects and designers
-              collaborates directly with clients to produce groundbreaking and
-              visually arresting designs. Pillar Construction demonstrates
-              exceptional proficiency in fully realising a wide range of
-              architectural styles, whether they are modern residences or
-              classic structures.
-            </p>
-            <h4 class="text-uppercase mb-3 text-primary">
-              4. Focus on Sustainability
-            </h4>
-            <p>
-              Eco-Friendly principles: Pillar Construction is dedicated to
-              implementation of sustainable building principles in order to
-              address the increasing environmental concerns. Their approach
-              involves integrating energy-efficient designs, utilising
-              environmentally friendly materials, and implementing measures to
-              reduce waste.
-            </p>
-
-            <p>
-              Their projects frequently achieve green building certifications,
-              which clearly demonstrate their commitment to reducing
-              environmental impact and advancing sustainability.
-            </p>
-            <h4 class="text-uppercase mb-3 text-primary">
-              5. Reliability and Timeliness
-            </h4>
-            <p>
-              Pillar Construction is renowned for its track record of
-              consistently delivering projects within the predetermined
-              timeframes. Their effective project management methodologies and
-              optimised procedures guarantee the timely completion of
-              deliverables without sacrificing the standard of excellence.
-            </p>
-
-            <p>
-              Transparent Communication: Consistent updates and unambiguous
-              communication with clients are a distinguishing feature of their
-              customer service. This level of transparency facilitates the
-              management of expectations and the timely resolution of any
-              problems.
+              The Basis: NPR 2,500 - NPR 3,000 per square foot Construction
+              Standard: NPR 3,000 - NPR 4,000 per square foot Premium
+              Construction: NPR 4,000 - NPR 5,000 and beyond per square foot.
             </p>
 
             <img
               class="img-fluid w-100 rounded mb-5"
-              src="img/blog/blog-2.webp"
+              src="img/blog/blog-3.webp"
               alt=""
             />
             <h4 class="text-uppercase mb-3 text-primary">
-              6. Safety and Compliance
+              3. Detailed Budget Breakdown
             </h4>
             <p>
-              Pillar Construction places utmost importance on compliance with
-              stringent safety standards. In order to maintain a safe working
-              environment, they strictly follow rigorous safety procedures and
-              regularly provide training for its employees.
+              To get a more accurate estimate, consider breaking down the budget
+              into the following categories:
+            </p>
+            <h5 class="text-uppercase mb-3 text-primary">A. Land Costs</h5>
+            <p>
+              The cost of buying land varies greatly based on location and size.
+              It should isncludes registration and legal documentation costs.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">
+              B. Design and Planning
+            </h4>
+            <p>
+              Architect/Designer Fees: Typically 5% - 10% of the total
+              construction cost.
             </p>
             <p>
-              Regulatory Compliance: The company guarantees that all projects
-              adhere to the building codes and regulations prescribed by the
-              local authorities. By adhering to legal and safety regulations,
-              the buildings are certain to be both safe and legally compliant.
+              Engineering Fees: For structural and civil engineering, usually 2%
+              - 5% of the total cost.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">
+              C. Construction Costs
+            </h4>
+            <p>
+              Foundation: Costs for excavation, concrete, and reinforcement.
+            </p>
+            <p>Structure: Costs for walls, floors, and roof construction.</p>
+            <p>
+              Finishes: Includes plastering, painting, tiling, and flooring.
             </p>
 
+            <p>
+              Fixtures: Costs for electrical fixtures, plumbing, and hardware.
+            </p>
+            <h4 class="text-uppercase mb-3 text-primary">D. Labor Costs</h4>
+            <p>
+              Skilled Workers: Includes masons, carpenters, electricians, and
+              plumbers.
+            </p>
+            <p>Unskilled Workers: Includes general laborers.</p>
+            <h4 class="text-uppercase mb-3 text-primary">E. Materials</h4>
+            <p>Structural Materials: Bricks, cement, steel, etc.</p>
+            <p>Finishing Materials: Tiles, paint, fixtures, etc.</p>
             <h4 class="text-uppercase mb-3 text-primary">
-              7. Strong Client Relationships
+              F. Miscellaneous Costs
             </h4>
+            <p>Permits and Fees: Building permits, utility connection fees.</p>
             <p>
-              Pillar Construction adopts a customer-centric approach,
-              prioritising exceptional client satisfaction. Their
-              customer-centric strategy entails attentively listening to the
-              requirements of clients, offering competent guidance, and
-              achieving outcomes that surpass expectations.
-            </p>
-            <p>
-              Their demonstrated history of successful projects and contented
-              clientele is evident in a multitude of positive testimonials and
-              referrals. Such endorsements provide substantial evidence of the
-              company's dependability and excellence in its job.
-            </p>
-
-            <h4 class="text-uppercase mb-3 text-primary">
-              8. Competitive Pricing
-            </h4>
-            <p>
-              Pillar Construction provides excellent value for money by
-              employing competitive pricing strategies while maintaining high
-              quality standards. Their capacity to deliver economical solutions
-              while upholding rigorous standards renders them an appealing
-              option for clients seeking satisfactory value for their money.
-            </p>
-            <p>
-              The company offers comprehensive and clear quotations, thereby
-              assuring that clients have complete knowledge of the price and any
-              possible supplementary charges.
-            </p>
-
-            <h4 class="text-uppercase mb-3 text-primary">
-              9. Comprehensive Services
-            </h4>
-            <p>
-              Pillar Construction provides comprehensive services throughout the
-              entire service lifecycle, starting from the early consulting and
-              design phase to the construction and final handover. This
-              comprehensive strategy streamlines the implementation process for
-              clients and guarantees a smooth and uninterrupted experience.
-            </p>
-            <p>
-              The organisation offers post-construction support to mitigate any
-              potential problems that may occur after the conclusion of a
-              project and to guarantee sustained client satisfaction.
+              Contingency Fund: Typically 10% of the total budget for unexpected
+              expenses.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">Conclusion</h4>
             <p>
-              Selecting Pillar building entails choosing a company that
-              exemplifies exceptional quality, dependability, and ingenuity in
-              the field of building. Pillar Construction distinguishes itself as
-              a premium option for constructing robust, long-lasting, and
-              visually appealing buildings in Nepal, because to their unwavering
-              dedication to excellence, sustainability, and satisfied clients.
-              Whether you are undertaking a home or commercial project, Pillar
-              Construction is a reliable partner that can provide competent and
-              robust construction services.
+              Constructing a residence in Nepal necessitates meticulous
+              financial calculations and strategic preparation to guarantee that
+              the undertaking aligns with your desired outcomes and financial
+              limitations. In order to efficiently oversee your building
+              project, it is essential to comprehend the primary cost elements,
+              make estimations of expenses per square foot, and meticulously
+              categorise the budget. By using meticulous planning and effective
+              financial management, it is possible to transform your ideal home
+              into a tangible achievement within your budget.
             </p>
           </div>
           <!-- Blog Detail End -->
         </div>
 
         <!-- Sidebar Start -->
-        <div class="col-lg-4 bg-yellow">
+        <div class="col-lg-4">
           <!-- Category Start -->
           <div class="mb-5">
             <h3 class="text-uppercase mb-4 text-primary">Offers</h3>
